[gd_scene load_steps=11 format=3 uid="uid://batm8eishqj04"]

[ext_resource type="Theme" uid="uid://d1qd6ity2mdpl" path="res://creator/creator_ui.theme.tres" id="1_672ly"]
[ext_resource type="Texture2D" uid="uid://1p8xud3vo124" path="res://ui/common/sliders/slider_button.svg" id="2_5ofg0"]
[ext_resource type="Script" path="res://creator/selection/inspector/primitive/inspector_slider.gd" id="2_rq27e"]
[ext_resource type="Texture2D" uid="uid://cplq1i4kur4rv" path="res://ui/common/sliders/slider_button_highlight.svg" id="3_a4lxh"]
[ext_resource type="PackedScene" uid="uid://cy566ld7k03ue" path="res://creator/selection/inspector/primitive/inspector_reset_button.tscn" id="5_q3c3b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mw2ok"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.0431373, 0.0627451, 0.129412, 0.784314)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tfbcs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ftw7l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rqbt8"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ccuwt"]
blend_mode = 1

[node name="InspectorSlider" type="HBoxContainer"]
custom_minimum_size = Vector2(256, 30)
offset_right = 256.0
offset_bottom = 32.0
size_flags_horizontal = 3
theme = ExtResource("1_672ly")
theme_override_constants/separation = 0
script = ExtResource("2_rq27e")

[node name="LabelHolder" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2

[node name="Label" type="Label" parent="LabelHolder"]
clip_contents = true
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "E"
vertical_alignment = 1
clip_text = true

[node name="SliderHolder" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(76, 16)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_mw2ok")

[node name="Slider" type="HSlider" parent="SliderHolder"]
custom_minimum_size = Vector2(64, 30)
layout_mode = 2
size_flags_vertical = 1
theme_override_icons/grabber = ExtResource("2_5ofg0")
theme_override_icons/grabber_highlight = ExtResource("3_a4lxh")
theme_override_styles/slider = SubResource("StyleBoxEmpty_tfbcs")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_ftw7l")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_rqbt8")
max_value = 1.0
step = 0.01
allow_greater = true
allow_lesser = true

[node name="Value" type="Label" parent="SliderHolder"]
modulate = Color(0.145098, 0.419608, 0.984314, 1)
material = SubResource("CanvasItemMaterial_ccuwt")
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResetButton" parent="." instance=ExtResource("5_q3c3b")]
layout_mode = 2

[connection signal="value_changed" from="SliderHolder/Slider" to="." method="_on_slider_value_changed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
